# google-sheet-client

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
google_sheet_client/: __init__.py  client.py  config.py
tests/: test_client.py
